Update 'chatbot-test-app-15' component image to: quay.io/mvaldron-rhdh/chatbot-test-app-15:05bd45a18d3976c9952622c5178f83494b987567@sha256:9852b8f213c99ff91bec5962761ee3badfdace15d4af4cb54e63ca866facc2fc

--- a/components/chatbot-test-app-15/overlays/development/deployment-patch.yaml
+++ b/components/chatbot-test-app-15/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: chatbot-test-app-15
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-ai-dev/ai-template-bootstrap-app:latest # use pre-built to bootstrap 
-        name: app-inference 
+        - image: quay.io/mvaldron-rhdh/chatbot-test-app-15:05bd45a18d3976c9952622c5178f83494b987567@sha256:9852b8f213c99ff91bec5962761ee3badfdace15d4af4cb54e63ca866facc2fc # use pre-built to bootstrap 
+          name: app-inference
